--- a/Exercises/Exercises/Exercises.csproj
+++ b/Exercises/Exercises/Exercises.csproj
@@ -43,13 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="1\1_4.cs" />
+    <Compile Include="1\1_9.cs" />
+    <Compile Include="2\2_6.cs" />
+    <Compile Include="2\2_7.cs" />
     <Compile Include="3\3_2.cs" />
     <Compile Include="3\3_3.cs" />
     <Compile Include="3\3_4.cs" />
+    <Compile Include="3\3_5.cs" />
+    <Compile Include="4\4_1.cs" />
     <Compile Include="8\8_2.cs" />
     <Compile Include="8\8_3.cs" />
     <Compile Include="8\8_4.cs" />
     <Compile Include="8\8_5.cs" />
+    <Compile Include="8\8_9.cs" />
     <Compile Include="Exercise.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -58,9 +65,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="1\" />
-    <Folder Include="2\" />
-    <Folder Include="4\" />
     <Folder Include="Hard\" />
     <Folder Include="Moderate\" />
   </ItemGroup>
