--- a/Exercises/Exercises/Exercises.csproj
+++ b/Exercises/Exercises/Exercises.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="1\1_4.cs" />
+    <Compile Include="1\1_7.cs" />
     <Compile Include="1\1_9.cs" />
     <Compile Include="2\2_6.cs" />
     <Compile Include="2\2_7.cs" />
@@ -52,6 +53,8 @@
     <Compile Include="3\3_4.cs" />
     <Compile Include="3\3_5.cs" />
     <Compile Include="4\4_1.cs" />
+    <Compile Include="4\4_9.cs" />
+    <Compile Include="8\8_12.cs" />
     <Compile Include="8\8_2.cs" />
     <Compile Include="8\8_3.cs" />
     <Compile Include="8\8_4.cs" />
